; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/iphlpapi/extr_GetNetworkParams.c_WriteRegistryValue.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/iphlpapi/extr_GetNetworkParams.c_WriteRegistryValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_LOCAL_MACHINE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"System\\CurrentControlSet\\Services\\Tcpip\\Parameters\00", align 1
@KEY_WRITE = common dso_local global i32 0, align 4
@NO_ERROR = common dso_local global i64 0, align 8
@REG_SZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @WriteRegistryValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @WriteRegistryValue(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %8 = load i32, i32* @KEY_WRITE, align 4
  %9 = call i64 @RegOpenKeyExA(i32 %7, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 0, i32 %8, i32* %6)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @NO_ERROR, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = load i64, i64* %3, align 8
  %16 = load i32, i32* @REG_SZ, align 4
  %17 = load i64, i64* %4, align 8
  %18 = trunc i64 %17 to i32
  %19 = load i64, i64* %4, align 8
  %20 = call i64 @strlen(i64 %19)
  %21 = add nsw i64 %20, 1
  %22 = call i64 @RegSetValueExA(i32 %14, i64 %15, i32 0, i32 %16, i32 %18, i64 %21)
  store i64 %22, i64* %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @RegCloseKey(i32 %23)
  br label %25

25:                                               ; preds = %13, %2
  %26 = load i64, i64* %5, align 8
  ret i64 %26
}

declare dso_local i64 @RegOpenKeyExA(i32, i8*, i32, i32, i32*) #1

declare dso_local i64 @RegSetValueExA(i32, i64, i32, i32, i32, i64) #1

declare dso_local i64 @strlen(i64) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
